# rasterizer

./: .gitignore  CMakeLists.txt  Package.swift  README.md  main.c  module.modulemap
Sources/: CMakeLists.txt  rasterizer.c  rasterizer.h  utils.c  utils.h
src/: CMakeLists.txt  module.modulemap  rasterizer.c  rasterizer.h  utils.c  utils.h
src/include/: rasterizer.h  utils.h
